[gd_scene load_steps=4 format=3 uid="uid://bm5ye4du2k3ta"]

[ext_resource type="Script" uid="uid://coryl8brrnopj" path="res://UI/UpgradeScreen/foundation_page/foundation_page.gd" id="1_eyfy0"]
[ext_resource type="AudioStream" uid="uid://cw3snnmx6tkgm" path="res://SFX/UI/confirm_style_2_003.ogg" id="2_pmdis"]

[sub_resource type="LabelSettings" id="LabelSettings_in36i"]
font_size = 72

[node name="FoundationPage" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eyfy0")
base_reroll_cost = 250
price_multiplier = 2.0
regain_health_price_multiplier = 1.0
upgrade_armory_price_multiplier = 2.5
upgrade_ally_slots_price_multiplier = 2.0
upgrade_ability_slots_price_multiplier = 1.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_top = 41.0
offset_right = 96.5
offset_bottom = 89.474976
grow_horizontal = 2
text = "Foundations"
label_settings = SubResource("LabelSettings_in36i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="RegainHealthButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Regain 50 Health"

[node name="UpgradeBaseHealthButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Upgrade Base Health"

[node name="UpgradeAllySlotsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Upgrade Ally Slots"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="UpgradeAbilitySlotsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(360, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Upgrade Ability Slots"

[node name="UpgradeArmorySelectionButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Upgrade Armory Selection (1/3)"

[node name="UpgradeAugmentRerollsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Upgrade Augment Rerolls"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_pmdis")
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RegainHealthButton" to="." method="_on_regain_health_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/UpgradeBaseHealthButton" to="." method="_on_upgrade_base_health_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/UpgradeAllySlotsButton" to="." method="_on_upgrade_ally_slots_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/UpgradeAbilitySlotsButton" to="." method="_on_upgrade_ability_slots_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/UpgradeArmorySelectionButton" to="." method="_on_upgrade_armory_selection_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/UpgradeAugmentRerollsButton" to="." method="_on_upgrade_augment_rerolls_button_pressed"]
